Update ESICET PGAEnsemble Code.ipynb

--- a/ESICET PGAEnsemble Code.ipynb
+++ b/ESICET PGAEnsemble Code.ipynb
@@ -494,7 +494,7 @@
     "    weight_predictions1 = 0.7\n",
     "    weight_predictions4 = 0.3\n",
     "    # Calculate the weighted average of the predictions\n",
-    "    predictions = (predictions1 +predictions2+ predictions3+predictions5)/4\n",
+    "    predictions = (predictions1 +predictions2+ predictions5)/3\n",
     "    df=pd.read_csv(Test_tab_file_3C,sep=',')\n",
     "    col='CNNAttention_Pred'\n",
     "    df[col]=predictions\n",
